CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(DAEMON_FOR_PROJECT_NAME "FastoRedis" CACHE STRING "Daemon for project")
STRING(TOLOWER ${DAEMON_FOR_PROJECT_NAME} DAEMON_FOR_PROJECT_NAME_LOWERCASE)

SET(PROJECT_NAME "${DAEMON_FOR_PROJECT_NAME_LOWERCASE}_daemon" CACHE STRING "Project Name")
SET(PROJECT ${PROJECT_NAME})
PROJECT(${PROJECT_NAME})

ADD_DEFINITIONS(-DCONFIG_FILE_PATH="/home/fastoredis/fastoredis.com/docs/files/${DAEMON_FOR_PROJECT_NAME_LOWERCASE}.conf")
ADD_DEFINITIONS(-DPROJECT_NAME="${PROJECT_NAME}")

ADD_EXECUTABLE(${PROJECT_NAME} main.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME})
