CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME "FastoGT" CACHE STRING "Project name")
STRING(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWERCASE)

SET(PROJECT ${PROJECT_NAME})
PROJECT(${PROJECT_NAME})

ADD_DEFINITIONS(-DCONFIG_FILE_PATH="/home/sasha/${PROJECT_NAME_LOWERCASE}.conf")
ADD_DEFINITIONS(-DPROJECT_NAME="${PROJECT_NAME}")

ADD_EXECUTABLE(${PROJECT_NAME} main.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME})
