CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(PROJECT_NAME "FastoGT" CACHE STRING "Project name")
STRING(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWERCASE)

SET(PROJECT ${PROJECT_NAME})
PROJECT(${PROJECT_NAME})

ADD_DEFINITIONS(-DCONFIG_FILE_PATH="/etc/${PROJECT_NAME_LOWERCASE}.conf")
ADD_DEFINITIONS(-DPROJECT_NAME="${PROJECT_NAME}")

GET_FILENAME_COMPONENT(ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/../.. REALPATH)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${ROOT_DIR}/cmake")
INCLUDE(config) ###################
ADD_SUBDIRECTORY(${ROOT_DIR}/src/fasto/common/third-party/json-c json-c)

ADD_EXECUTABLE(${PROJECT_NAME} main.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} json-c)
